Add tar that is not installed by default on Rocky

--- a/vars/main.yml
+++ b/vars/main.yml
@@ -22,6 +22,7 @@ packages:
   system:
     - bash-completion
     - bzip2
+    - tar
     - vim
     - sudo
     - net-snmp
@@ -29,6 +30,8 @@ packages:
     - chrony
     - net-tools
     - htop
+    - nmon
+    - btop
     - iftop
     - iotop
     - telnet
