--- a/tasks/rgm/rgm_packages.yml
+++ b/tasks/rgm/rgm_packages.yml
@@ -15,38 +15,34 @@
     name: "python3-dnf-plugin-versionlock"
     state: present
 
-- name: 'RGM | Packages | Copy grafana repository to fix version (else appstream repository is used)'
-  ansible.builtin.copy:
-    src: "grafana/grafana.repo"
-    dest: "/etc/yum.repos.d/grafana.repo"
-    owner: root
-    group: root
-    mode: "0644"
-
-- name: "RGM | Packages | Yum regenerate cache"
-  ansible.builtin.yum:
-    update_cache: true
-
-- name: "RGM | Packages | Import grafana repository GPG key"
-  ansible.builtin.rpm_key:
-    key: https://rpm.grafana.com/gpg.key
-    state: present
-
-- name: "RGM | Packages | Prevent grafana version 6.4.0 from being updated on EL7"
-  when:
-    - ansible_distribution_major_version|int == 7
-  community.general.yum_versionlock:
-    state: present
-    name:
-      - grafana-6.4.0-1.x86_64
-
-- name: "RGM | Packages | Prevent grafana version 6.4.0 from being updated"
+- name: 'RGM | Packages | Enable grafana repository on EL9'
   when:
     - ansible_distribution_major_version|int >= 9
-  community.general.dnf_versionlock:
-    state: present
-    name:
-      - grafana-6.4.0-1.x86_64
+  block:
+    - name: 'RGM | Packages | Copy grafana repository to fix version (else appstream repository is used)'
+      ansible.builtin.copy:
+        src: "grafana/grafana.repo"
+        dest: "/etc/yum.repos.d/grafana.repo"
+        owner: root
+        group: root
+        mode: "0644"
+
+    - name: "RGM | Packages | Import grafana repository GPG key"
+      ansible.builtin.rpm_key:
+        key: https://rpm.grafana.com/gpg.key
+        state: present
+
+    - name: "RGM | Packages | Yum regenerate cache"
+      ansible.builtin.yum:
+        update_cache: true
+
+    - name: "RGM | Packages | Prevent grafana version 6.4.0 from being updated"
+      when:
+        - ansible_distribution_major_version|int >= 9
+      community.general.dnf_versionlock:
+        state: present
+        name:
+          - grafana-6.4.0-1.x86_64
 
 - name: "RGM | Packages | Install RGM Packages (it may take some time...)"
   retries: 10
