--- a/vars/main.yml
+++ b/vars/main.yml
@@ -19,6 +19,8 @@ packages:
     - python2-PyMySQL
   mariadb_el9:
     - python3-PyMySQL
+# Needed by thruk mysql.so for reportings
+    - mysql-libs
   system:
     - bash-completion
     - bzip2
