--- a/vars/main.yml
+++ b/vars/main.yml
@@ -72,10 +72,11 @@ packages:
   apache_el7:
     - php-process
     - php-snmp
+  elasic_el7:
+    - elasticsearch-curator
   elastic:
     - java-11-openjdk-headless
     - elasticsearch-oss
-    - elasticsearch-curator
     - metricbeat
     - filebeat
     - kibana-oss
@@ -155,6 +156,8 @@ eshq_group: elastichq
 
 # patterns (regex) of Elsticsearch indexes to automatically close and delete with Curator
 # this is used in 'curator_actions.yml.j2' Jinja template
+curator:
+  venv_path: '/opt/elasticsearch-curator'
 curator_patterns:
   - '^[a-z]+beat-.*'
   - '^rgm[\w\d]+-.*'
